--- a/app/views/berita-tender/history.twig
+++ b/app/views/berita-tender/history.twig
@@ -2,7 +2,7 @@
     <li class="timeline-month"><span>History Perubahan</span></li>
     {% for history in histories|slice(0, 5) %}
         <li class="timeline-item right">
-            <div class="timeline-content timeline-type {{ history.type }}">
+            <div class="timeline-content timeline-type {{ history.color }}">
                 <div class="timeline-icon"><i class="icon mdi {{ history.icon }}"></i></div>
                 <div class="timeline-avatar"><img src="public/profile/{{ history.user.image }}" alt="Avatar" class="circle"></div>
                 <div class="timeline-header"><span class="timeline-autor">{{ history.user.nama }}</span>
