--- a/app/views/navbar.phtml
+++ b/app/views/navbar.phtml
@@ -112,7 +112,7 @@
                         <li class="divider"><span class="label label-default">Pengaturan</span></li>
 
                         <li>
-                            <a href="index.html"><i class="icon mdi mdi-file-text"></i><span>Dokumen Master Adm</span></a>
+                            <a href="<?= $this->pathFor('dokumenMaster_daftar') ?>"><i class="icon mdi mdi-file-text"></i><span>Dokumen Master Adm</span></a>
                         </li>
 
                         <li>
