--- a/app/views/navbar.phtml
+++ b/app/views/navbar.phtml
@@ -116,7 +116,7 @@
                         </li>
 
                         <li>
-                            <a href="index.html"><i class="icon mdi mdi-run"></i><span>Pengguna</span></a>
+                            <a href="<?= $this->pathFor('users_daftar') ?>"><i class="icon mdi mdi-run"></i><span>Pengguna</span></a>
                         </li>
                     </ul>
                 </div>
