--- a/app/views/boq/detail.phtml
+++ b/app/views/boq/detail.phtml
@@ -80,7 +80,7 @@ $this->start('contents');
         <div class="panel panel-default panel-table  panel-border-color panel-border-color-primary">
             <div class="panel-heading">Daftar BOQ
                 <div class="tools">
-                    <button class="btn btn-rounded btn-space btn-primary btn-sm" data-toggle="modal" data-target="#form-unitkerja">
+                    <button class="btn btn-rounded btn-space btn-primary btn-sm open-modal-tambah">
                         <i class="mdi mdi-shopping-cart-plus"></i>
                         &nbsp; Tambah BOQ
                     </button>
@@ -105,48 +105,48 @@ $this->start('contents');
             </div>
         </div>
     </div>
-    <div id="form-unitkerja" tabindex="-1" role="dialog" class="modal fade colored-header colored-header-primary">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" data-dismiss="modal" aria-hidden="true" class="close md-close"><span class="mdi mdi-close"></span></button>
-                    <h3 class="modal-title">Form Input BOQ</h3>
-                </div>
-                <div class="modal-body">
+    <div id="modal-tambah" class="modal-container colored-header colored-header-primary modal-effect-9">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" data-dismiss="modal" aria-hidden="true" class="close md-close"><span class="mdi mdi-close"></span></button>
+                <h3 class="modal-title">Form Input BOQ</h3>
+            </div>
+            <div class="modal-body form">
+                <form method="post" action="<?= $this->pathFor('BOQTender_set', ['id_tender'=>$tender['id_tender']]) ?>">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Nama Vendor</label>
-                                <input type="text" placeholder="PT. XYZ" id="modal-vendor" class="form-control">
+                                <input type="text" placeholder="PT. XYZ" id="input-vendor" class="form-control" name="nama_vendor">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Nama Barang</label>
-                                <input type="text" placeholder="GWS 55m" id="modal-barang" class="form-control">
+                                <input type="text" placeholder="GWS 55m" id="input-barang" class="form-control" name="nama_barang">
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-7">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label>Harga Barang Satuan</label>
                                 <div class="input-group">
                                     <span class="input-group-addon" id="basic-addon1">Rp</span>
-                                    <input type="number" class="form-control" id="modal-harga">
+                                    <input type="number" class="form-control" id="input-harga" name="harga_persatuan">
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label>Jumlah</label>
-                                <input type="number" class="form-control" id="modal-volume">
+                                <input type="number" class="form-control" id="input-volume" name="volume_barang">
                             </div>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <label>Ukuran Satuan</label>
-                                <select multiple="" id="modal-satuan">
+                                <select multiple="" id="select-satuan" name="ukuran_satuan">
                                     <optgroup label="Panjang">
                                         <option value="mm">mm</option>
                                         <option value="cm">cm</option>
@@ -194,11 +194,11 @@ $this->start('contents');
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary form-unitkerja-simpan">Tambahkan</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-default md-close">Batal</button>
-                </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary modal-close btn-simpan">Tambahkan</button>
+                <button type="button" class="btn btn-default modal-close">Batal</button>
             </div>
         </div>
     </div>
@@ -241,6 +241,7 @@ $this->start('js');
     <script src="public/assets/lib/datatables/plugins/buttons/js/buttons.bootstrap.js" type="text/javascript"></script>
     <script src="public/assets/js/app-tables-datatables.js" type="text/javascript"></script>
     <script src="public/assets/lib/select2/js/select2.min.js" type="text/javascript"></script>
+    <script src="public/assets/js/jquery.form.min.js" type="text/javascript"></script>
     <script>
         $(document).ready(function () {
             $.fn.modal.Constructor.prototype.enforceFocus = $.noop;
@@ -257,8 +258,7 @@ $this->start('js');
                 "<'row be-datatable-footer'<'col-sm-5'i><'col-sm-7'p>>",
                 language: {
 
-                    emptyTable: '<h4>Belum ada data BOQ</h4>' +
-                    '<button class="btn btn-rounded btn-space btn-primary btn-sm" data-toggle="modal" data-target="#form-unitkerja"><i class="mdi mdi-shopping-cart-plus"></i>&nbsp; Tambah BOQ </button>',
+                    emptyTable: '<h4>Belum ada data BOQ</h4>',
                     lengthMenu: "_MENU_ &nbsp; data per halaman",
                     "zeroRecords": "Tidak ada data yang cocok dengan pencarian anda",
                     "info": "Hal _PAGE_ dari _PAGES_ halaman",
@@ -330,6 +330,44 @@ $this->start('js');
                     },
                 ],
             });
+            
+            $('.open-modal-tambah').on('click', function () {
+                $('#modal-tambah').niftyModal({
+                    buttons: [
+                        {
+                            class: 'btn-simpan',
+                            callback: function ( btn, modals, event ) {
+                                var modal = $(modals.modalEl);
+                                modal.find('form').ajaxSubmit({
+                                    dataType: 'json',
+                                    beforeSubmit: function (formData, jqForm, options) {
+                                        for (var i=0; i < formData.length; i++) {
+                                            if (!formData[i].value) {
+                                                return false;
+                                            }
+                                        }
+                                    },
+                                    success: function (res, status, xhr, $form) {
+                                        if(res.status == 'success'){
+                                            unitKerja.ajax.reload();
+                                        }
+                                    }
+                                });
+                                return true;
+                            }
+                        },
+                    ],
+                    beforeOpen: function( modals ){
+                        var modal = $(modals.modalEl);
+                        modal.find('#select-satuan').select2({
+                            placeholder: 'Meter',
+                            width: '100%',
+                            maximumSelectionLength: 1,
+                            tags: true
+                        });
+                    }
+                });
+            })
 
             $('#modal-delete').on('show.bs.modal', function (event) {
                 var mBtn = $(event.relatedTarget);
@@ -382,10 +420,7 @@ $this->start('js');
                         },
                         dataType: "JSON"
                     });
-
-
                 })
-
             })
 
         })
