--- a/app/views/base.phtml
+++ b/app/views/base.phtml
@@ -79,7 +79,7 @@
                                                         <li class="notification <?= ($active_notification_list[$i]['status'] == null ? 'notification-unread' : '') ?>">
                                                             <a href="<?= $active_notification_list[$i]['meta'] ?>">
                                                                 <div class="image">
-                                                                    <img src="public/assets/img/<?= $user_detail['image'] ?>" alt="Avatar">
+                                                                    <img src="public/profile/<?= $user_detail['image'] ?>" alt="Avatar">
                                                                 </div>
                                                                 <div class="notification-info">
                                                                     <div class="text">
